# agent-

./: .env.example  .gitignore  README.md  eslint.config.mjs  package-lock.json  package.json  start-windows.ps1  start-wsl.bat  start.bat  start.sh  vitest.config.ts
app/: globals.css  (+2 more)
rag-backend/: .env.example  README.md  pyproject.toml  start.bat  改进.md
rag-backend/app/: config.py  dependencies.py  domain.py  main.py  model_api.py  observability.py  sanitization.py
rag-backend/app/infrastructure/chunkers/: document_aware.py
rag-backend/app/infrastructure/embeddings/: base.py  local_api.py  sentence_transformers.py
rag-backend/app/infrastructure/generators/: base.py  minimax.py
rag-backend/app/retrieval/: bm25_indexer.py
rag-backend/app/routers/: agent.py  collections.py  documents.py  health.py
rag-backend/app/services/: document_service.py  ingestion_service.py  job_service.py  rag_query_service.py
rag-backend/app/static/: admin.css  admin.js
rag-backend/app/templates/: admin.html
rag-backend/app/workers/: ingest_worker.py
rag-backend/rag_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
rag-backend/tests/: test_api_routes.py  test_app_lifespan.py  test_bm25_indexer.py  test_chroma_vector_store.py  test_config.py  test_embedding_dependencies.py  test_local_embedding_provider.py  test_local_reranker.py  test_minimax_generator.py  test_model_api.py  test_parsers_and_chunker.py  test_queue_adapter.py  test_rag_query_service.py  test_sentence_transformers_embedding_provider.py  test_services.py  test_sqlite_repository.py  test_worker.py
(+28 files in other folders)
